[metadata]
name = adb-wrapper
version = 1.0.0
author = Terminus
description = A Python ADB wrapper for executing commands on multiple devices
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    wget
